CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(ComputerGraphic)

IF(NOT CMAKE_BUILD_TYPE) 
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF(NOT CMAKE_BUILD_TYPE)
MESSAGE(STATUS "CMAKE_BUILD_TYPE:${CMAKE_BUILD_TYPE}")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -W -Wextra -O0 -ggdb3")

SET(QUERY_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/include
CACHE INTERNAL "")

INCLUDE_DIRECTORIES(${QUERY_INCLUDE_DIRS})
MESSAGE(STATUS "QUERY_INCLUDE_DIRS:${QUERY_INCLUDE_DIRS}")
ADD_SUBDIRECTORY(src)
