CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(ComputerGraphic)

IF(NOT CMAKE_BUILD_TYPE) 
    SET(CMAKE_BUILD_TYPE Debug)
ENDIF(NOT CMAKE_BUILD_TYPE)
MESSAGE(STATUS "CMAKE_BUILD_TYPE:${CMAKE_BUILD_TYPE}")
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -O2")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Wall -W -Wextra -O0 -ggdb3 -DDEBUG")

SET(QUERY_INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/include
CACHE INTERNAL "")

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

#FIND_PACKAGE(SFML 2 COMPONENTS system window graphics audio REQUIRED)
#INCLUDE_DIRECTORIES(${SFML_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${QUERY_INCLUDE_DIRS})
MESSAGE(STATUS "QUERY_INCLUDE_DIRS:${QUERY_INCLUDE_DIRS}")
ADD_SUBDIRECTORY(src)
